issue 321 - modifed vertical alignment for label
svn path=/trunk/; revision=542


Former-commit-id: a8679497835ae3397f57ad6c82ec72b9c56f26a3

--- a/themes/src/suntheme/css/layout.css
+++ b/themes/src/suntheme/css/layout.css
@@ -830,7 +830,10 @@ a.DatOthBldLnk@THEME_CSS@:link, a.DatOthBldLnk@THEME_CSS@:visited {
 	padding-left:2px;
 }
 
-.TxtAraLabel@THEME_CSS@  { vertical-align: top; }
+.TxtAraLabel@THEME_CSS@ span , .TxtAraLabel@THEME_CSS@ span > img { vertical-align: top; }
+
+
+
 /*---*/
 
 /* EDITABLE FIELDS */
